Tweak the image carousel to update on drag to avoid white gaps in the carousel

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-carousel.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-carousel.scss
@@ -81,6 +81,13 @@
 		li {
 			@include size($sizeGrid * 2);
 			display: inline-block;
+			position: relative;
+
+		}
+
+		.pagination-button {
+			@include size($sizeGrid * 2);
+			display: inline-block;
 			border: 1px solid $colorBorder;
 			text-align: center;
 			border-radius: 100%;
